<resources>
    <string name="app_name">NCAABDashboard</string>
    <string name="home">Home Team</string>
    <string name="home_team_logo">Home Team Logo</string>
    <string name="colon">:</string>
    <string name="away_team_logo">Away Team Logo</string>
    <string name="away_team">Away Team</string>
    <string name="men_s_women_s">Men\'s</string>
    <string name="division_1">Division 1 </string>
    <string name="placeholder_time">00:00 (AM/PM)</string>
    <string name="where_to_watch">Where to Watch</string>
    <string name="find_tickets">Find Tickets</string>
    <string name="news_headline">News Headline</string>
    <string name="source_url">Source: URL</string>
    <string name="news_story_synopsis">News Story Synopsis</string>
    <string name="about_us">About Us</string>
    <string name="search">Search College Basketball News</string>
    <string name="find_a_team">Find a Team</string>
    <string name="preferences">Preferences</string>
    <string name="find_a_player">Find a Player</string>
    <string name="search_news_stories">Search News Stories</string>
    <string name="title">Title</string>
    <string name="school">School</string>
    <string name="ap">AP</string>
    <string name="ap_top_25_teams">AP Top 25 Teams</string>
    <string name="sample_rank_and_school">#0 School</string>
    <string name="sample_number">#N</string>
    <string name="sample_player_name">First Last</string>
    <string name="roster">Roster</string>
    <string name="see_rest_of_story">See Rest of Story</string>
</resources>