<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/SearchNews"
        android:icon="@drawable/search"
        android:title="@string/search_news_stories"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/FindTeams"
        android:icon="@drawable/team"
        android:title="@string/find_a_team"
        app:showAsAction="never"
        />

    <!--
    <item
        android:id="@+id/FindPlayers"
        android:icon="@drawable/player"
        android:title="@string/find_a_player"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/UserPrefs"
        android:title="@string/preferences"
        app:showAsAction="never"
        />
        -->

    <item
        android:id="@+id/AboutApp"
        android:title="@string/about_us"
        app:showAsAction="never"
        />

</menu>