<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/NewsStoryCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    card_view:cardElevation="8dp"
    card_view:cardCornerRadius="4dp"
    android:foreground="?android:attr/selectableItemBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/NewsHeadline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/news_headline"
            android:textSize="25sp"
            android:textAlignment="center" />

        <ImageView
            android:id="@+id/NewsImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            card_view:srcCompat="@drawable/placeholder" />

        <TextView
            android:id="@+id/NewsSynopsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/news_story_synopsis"
            android:textSize="15sp"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/NewsSource"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/source_url"
            android:textSize="11sp"
            android:textAlignment="center" />
    </LinearLayout>

</androidx.cardview.widget.CardView>